feat: config for charybdis nano and trackball

--- a/config/totem.conf
+++ b/config/totem.conf
@@ -8,5 +8,16 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=y
+
+CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
+CONFIG_RGBLED_WIDGET_LAYER_1_COLOR=0
+CONFIG_RGBLED_WIDGET_LAYER_2_COLOR=0
+CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=1
+CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=2
+CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=3
+CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=4
+CONFIG_RGBLED_WIDGET_LAYER_7_COLOR=5
+CONFIG_RGBLED_WIDGET_LAYER_8_COLOR=6
+CONFIG_RGBLED_WIDGET_LAYER_9_COLOR=7
