--- a/draw/totem.yaml
+++ b/draw/totem.yaml
@@ -1,7 +1,7 @@
 layout: {zmk_keyboard: totem_left}
 layers:
   Base:
-  - Q
+  - {t: Q, s: AltGr+`}
   - W
   - E
   - R
@@ -24,7 +24,7 @@ layers:
   - Esc
   - Z
   - X
-  - C
+  - {t: C, s: 'AltGr+,'}
   - V
   - B
   - N
@@ -158,20 +158,20 @@ layers:
   - ''
   Raise:
   - {type: trans}
-  - F9
-  - F10
-  - F11
-  - F12
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
   - PgUp
   - Home
   - ↑
   - End
   - {type: trans}
+  - {t: Gui, h: sticky}
+  - {t: Alt, h: sticky}
+  - {t: Ctrl, h: sticky}
+  - {t: Shift, h: sticky}
   - {type: trans}
-  - F5
-  - F6
-  - F7
-  - F8
   - PgDn
   - ←
   - ↓
@@ -179,10 +179,10 @@ layers:
   - {type: trans}
   - Esc
   - {type: trans}
-  - F1
-  - F2
-  - F3
-  - F4
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -284,19 +284,19 @@ layers:
   - '8'
   - '9'
   - '0'
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
+  - F1
+  - F2
+  - F3
+  - F4
+  - F5
+  - F6
+  - F7
+  - F8
+  - F9
+  - F10
   - Esc
-  - {type: trans}
-  - {type: trans}
+  - F11
+  - F12
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -323,7 +323,7 @@ layers:
   - ↑
   - End
   - {type: trans}
-  - {type: trans}
+  - Alt+F4
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -362,7 +362,7 @@ layers:
   - ↑
   - End
   - {type: trans}
-  - {type: trans}
+  - Gui+Q
   - {type: trans}
   - {type: trans}
   - {type: trans}
