--- a/build.yaml
+++ b/build.yaml
@@ -54,12 +54,10 @@ include:
     # Totem without a dongle
   - board: seeeduino_xiao_ble
     shield: totem_left rgbled_adapter
-    snippet: studio-rpc-usb-uart
     artifact-name: totem_standalone_left
     cmake-args: -DBODGE=y
   - board: seeeduino_xiao_ble
     shield: totem_right rgbled_adapter
-    snippet: studio-rpc-usb-uart
     artifact-name: totem_standalone_right
 
     # same as totem but without the bodge
@@ -71,7 +69,6 @@ include:
     shield: totem_right rgbled_adapter
     snippet: studio-rpc-usb-uart
     artifact-name: totemx_standalone_right
-
 
     # Totem with a dongle
   - board: seeeduino_xiao_ble
@@ -90,11 +87,9 @@ include:
     # Forager without a dongle
   - board: seeeduino_xiao_ble
     shield: forager_left rgbled_adapter
-    snippet: studio-rpc-usb-uart
     artifact-name: forager_standalone_left
   - board: seeeduino_xiao_ble
-    shield: forager_right
-    snippet: studio-rpc-usb-uart zmk-usb-logging
+    shield: forager_right rgbled_adapter
     artifact-name: forager_standalone_right
 
     # Forager with a dongle
@@ -117,5 +112,4 @@ include:
     artifact-name: charybdis_nano_standalone_left
   - board: nice_nano_v2
     shield: charybdis_nano_right
-    snippet: zmk-usb-logging
     artifact-name: charybdis_nano_standalone_right
