--- a/config/charybdis_nano.conf
+++ b/config/charybdis_nano.conf
@@ -5,3 +5,10 @@
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+
+# trackball
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_POINTING=y
+CONFIG_PMW3610=y
