--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -24,9 +24,11 @@ ZMK_COMBO(lesc,       &esc,             LM2 LM1,     BASE NAV NUM MAC GAMING, CO
 ZMK_COMBO(nword,      &num_dance,       RM1 RM3,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, RA(RSFT), KEYS_L KEYS_R)
 ZMK_COMBO(lnword,     &num_dance,       LM1 LM3,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LA(LSFT), KEYS_L KEYS_R)
 
-ZMK_COMBO(cword,      &caps_word,       LM1 RM1,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(rSFT), KEYS_L KEYS_R)
+ZMK_COMBO(cword,      &caps_word,       LM1 RM1,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(RSFT), KEYS_L KEYS_R)
 
 ZMK_COMBO(mouse,      &smart_mouse,     LB3 LB4,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(leader,      &leader,         RT1 RT2 RT3 RT4,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(cut,        &kp LC(X),        LB3 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
