--- a/build.yaml
+++ b/build.yaml
@@ -13,11 +13,6 @@
 #
 ---
 include:
-#  - board: nice_nano_v2
-#    shield: lily58_left nice_view_adapter nice_view_battery
-#    snippet: studio-rpc-usb-uart
-#  - board: nice_nano_v2
-#    shield: lily58_right nice_view_adapter nice_view_battery
   - board: seeeduino_xiao_ble
     shield: tester_xiao
   - board: nice_nano_v2
@@ -113,3 +108,11 @@ include:
   - board: nice_nano_v2
     shield: charybdis_nano_right
     artifact-name: charybdis_nano_standalone_right
+
+    # Crosses/bridges without a dongle
+  - board: nice_nano_v2
+    shield: crosses_left
+    artifact-name: crosses_standalone_left
+  - board: nice_nano_v2
+    shield: crosses_right
+    artifact-name: crosses_standalone_right
