more work on the crosses

--- a/config/west.yml
+++ b/config/west.yml
@@ -17,10 +17,9 @@
 #
 ---
 manifest:
-  version: "1.2"
   defaults:
     remote: urob
-    revision: v0.2 # Pin everything to v0.2
+    revision: v0.3
 
   remotes:
     - name: urob
@@ -149,10 +148,9 @@ manifest:
       import: west.yml
       path: modules/
 
-    # Temporarily overload Zephyr until
-    # https://github.com/zmkfirmware/zephyr/pull/40 is merged.
     - name: zephyr
       revision: v3.5.0+zmk-fixes
+      remote: zmkfirmware
       clone-depth: 1
       import:
         # Only enable most commonly used boards. For less common hardware one
