--- a/build.yaml
+++ b/build.yaml
@@ -116,3 +116,4 @@ include:
   - board: nice_nano_v2
     shield: crosses_right
     artifact-name: crosses_standalone_right
+    snippet: zmk-usb-logging
