--- a/config/crosses_right.conf
+++ b/config/crosses_right.conf
@@ -16,3 +16,22 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_PMW3610=y
+
+CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1000
+CONFIG_PMW3610_REPORT_INTERVAL_MIN=16
+
+CONFIG_PMW3610_IGNORE_FIRST_N=15
+CONFIG_PMW3610_IGNORE_AFTER_REST=n
+CONFIG_PMW3610_ANTI_WARP=y
+CONFIG_PMW3610_ANTI_WARP_THRES=100
+
+#CONFIG_PMW3610_LOG_LEVEL_DBG=y
+#
+# Bump the power up
+
+# Help Realtek and Intel chips a bit
+CONFIG_BT_CTLR_PHY_2M=n
