feat: more work on the soft off button

--- a/config/crosses_left.conf
+++ b/config/crosses_left.conf
@@ -14,3 +14,6 @@ CONFIG_PMW3610_ANTI_WARP=y
 CONFIG_PMW3610_ANTI_WARP_THRES=100
 
 CONFIG_PMW3610_LOG_LEVEL_DBG=n
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=y
