--- a/config/crosses_left.conf
+++ b/config/crosses_left.conf
@@ -1,19 +1,5 @@
 CONFIG_ZMK_DISPLAY=n
-CONFIG_SPI=n
-CONFIG_INPUT=n
+
 CONFIG_ZMK_POINTING=y
-# Turn on logging, and set ZMK logging to debug output
-CONFIG_ZMK_USB_LOGGING=n
+CONFIG_SPI=y
 CONFIG_PMW3610=n
-CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1500
-CONFIG_PMW3610_REPORT_INTERVAL_MIN=16
-
-CONFIG_PMW3610_IGNORE_FIRST_N=15
-CONFIG_PMW3610_IGNORE_AFTER_REST=n
-CONFIG_PMW3610_ANTI_WARP=y
-CONFIG_PMW3610_ANTI_WARP_THRES=100
-
-CONFIG_PMW3610_LOG_LEVEL_DBG=n
-
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_PM_SOFT_OFF=y
