--- a/config/west.yml
+++ b/config/west.yml
@@ -1,4 +1,3 @@
-# This file specifies the build dependencies for Github Action workflows and
 # for local build environments. The workspace has four toplevel directories
 # containing the user config, modules, zephy and ZMK.
 #
@@ -50,6 +49,8 @@ manifest:
       url-base: https://github.com/kot149
     - name: efogdev
       url-base: https://github.com/efogdev
+    - name: bluedrink9
+      url-base: https://github.com/bluedrink9
 
   projects:
     - name: zmk
@@ -132,11 +133,6 @@ manifest:
       revision: main
       path: modules/zmk/keyboard-charybdis-nano
 
-#    - name: zmk-pmw3610-driver
-#      remote: badjeff
-#      revision: main
-#      path: modules/zmk/pwm3610-driver
-
     - name: zmk-scroll-snap
       remote: kot149
       revision: v1
@@ -145,8 +141,23 @@ manifest:
     - name: zmk-keyboard-crosses
       revision: main
       remote: coredump
-      import: west.yml
+#      import: west.yml
       path: modules/
+
+    - name: zmk-poor-mans-led-indicator
+      remote: bluedrink9
+      revision: main
+      path: modules/zmk/poor-mans-led-indicator
+
+    - name: zmk-pmw3610-driver
+      remote: efogdev
+      revision: bugfix/pm-device
+      path: modules/zmk/pmw3610-driver
+
+    - name: zmk-input-processor-report-rate-limit
+      remote: badjeff
+      revision: main
+      path: modules/zmk/input-processor-report-rate-limit
 
     - name: zephyr
       revision: v3.5.0+zmk-fixes
