--- a/config/crosses.conf
+++ b/config/crosses.conf
@@ -1,19 +1,29 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_PM_SOFT_OFF=y
-CONFIG_ZMK_IDLE_TIMEOUT=10000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=15000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+#CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_LOGGING_MINIMAL=y
-CONFIG_LOG_MODE_IMMEDIATE=n
+# CONFIG_ZMK_BATTERY_REPORTING=y
+# CONFIG_ZMK_LOGGING_MINIMAL=y
+# CONFIG_LOG_MODE_IMMEDIATE=n
 
 CONFIG_ZMK_POINTING=y
-CONFIG_ZMK_USB=y
 
+CONFIG_INDICATOR_LED_WIDGET=y
+CONFIG_INDICATOR_LED_SHOW_BATTERY_ON_BOOT=y
+CONFIG_INDICATOR_LED_SHOW_BLE=n
+CONFIG_INDICATOR_LED_SHOW_PERIPHERAL_BLE=n
+CONFIG_INDICATOR_LED_SHOW_LAYER_CHANGE=n
 
-#CONFIG_INDICATOR_LED_WIDGET=y
-#CONFIG_INDICATOR_LED_SHOW_BATTERY_ON_BOOT=y
-#CONFIG_INDICATOR_LED_SHOW_BLE=y
+# Bluetooth tweaks
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=n
+CONFIG_BT_CTLR_CONN_RSSI=y
+CONFIG_BT_CTLR_TX_PWR_DYNAMIC_CONTROL=y
+CONFIG_BT_CTLR_PHY_2M=y
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
