--- a/config/west.yml
+++ b/config/west.yml
@@ -51,6 +51,8 @@ manifest:
       url-base: https://github.com/efogdev
     - name: bluedrink9
       url-base: https://github.com/bluedrink9
+    - name: oleksandrmaslov
+      url-base: https://github.com/oleksandrmaslov
 
   projects:
     - name: zmk
@@ -150,14 +152,19 @@ manifest:
       path: modules/zmk/poor-mans-led-indicator
 
     - name: zmk-pmw3610-driver
-      remote: efogdev
-      revision: bugfix/pm-device
+      remote: coredump
+      revision: main
       path: modules/zmk/pmw3610-driver
 
     - name: zmk-input-processor-report-rate-limit
       remote: badjeff
       revision: main
       path: modules/zmk/input-processor-report-rate-limit
+
+    - name: zmk-pointing-acceleration
+      remote: oleksandrmaslov
+      revision: main
+      path: modules/zmk/pointing-acceleration
 
     - name: zephyr
       revision: v3.5.0+zmk-fixes
