--- a/config/crosses.conf
+++ b/config/crosses.conf
@@ -27,3 +27,10 @@ CONFIG_BT_CTLR_CONN_RSSI=y
 CONFIG_BT_CTLR_TX_PWR_DYNAMIC_CONTROL=y
 CONFIG_BT_CTLR_PHY_2M=y
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+
+CONFIG_BT_BAS=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+# For split keyboards:
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
