--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,20 @@
 *.dtsi text linguist-language=C++
 *.keymap text linguist-language=C++
 * text=auto
+
+* text=auto eol=lf
+*.c     text eol=lf
+*.h     text eol=lf
+*.cpp   text eol=lf
+*.hpp   text eol=lf
+*.dts   text eol=lf
+*.dtsi  text eol=lf
+*.conf  text eol=lf
+*.overlay text eol=lf
+*.yaml  text eol=lf
+*.yml   text eol=lf
+*.py    text eol=lf
+*.sh    text eol=lf
+*.kconfig text eol=lf
+Kconfig* text eol=lf
+
